# chat-bot

./: .gitignore  README.md  requirements.txt  streamlit_app.py
backend/: .gitignore  pyproject.toml
backend/src/backend/: agent.py  config.py  fix.py  main.py  meta_agent.py
backend/src/backend/mock/: tools.py
backend/src/backend/rag/: rag.py
frontend/: index.py  pyproject.toml
