[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "yifan",email = "jeromeyao1999@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
